# raytrace

./: .gitignore  App.hpp  Cargo.toml  FlexBison.targets  LightProbeDlg.cpp  Main.cpp  OpenCL.cpp  OpenCL.hpp  Proxies.hpp  Raytrace.pro  RenderControlDlg.cpp  RenderControlDlg.hpp  kernels.cl  meson.build  python.cpp  raytrace.sln  resources.rc  scene.txt  scene_dragon_indirect.txt  scene_sphere.txt  scene_sphere_transparent.txt  scene_teapot.txt  test.py
App/: Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PythonInterface.cpp  PythonInterface.hpp  app.py  test.py
Lighter/: Base.cpp  Base.hpp  Combined.cpp  Combined.hpp  Direct.cpp  Direct.hpp  IndirectCached.cpp  IndirectCached.hpp  IrradianceCache.cpp  IrradianceCache.hpp  IrradianceCached.cpp  IrradianceCached.hpp  Master.cpp  Master.hpp  RadianceGradient.cpp  Radiant.cpp  Radiant.hpp  Specular.cpp  Transmit.cpp  Transmit.hpp  UniPath.cpp  UniPath.hpp
Math/: Beam.cpp  Beam.hpp  Bivector.cpp  Bivector.hpp  Bivector2D.cpp  Bivector2D.hpp  CLKernels.cl  CLProxies.hpp  Color.cpp  Color.hpp  Kernels.cl  Matrix.cpp  Matrix.hpp  Normal.cpp  Normal.hpp  OrthonormalBasis.cpp  OrthonormalBasis.hpp  Pdf.cpp  Pdf.hpp  Point.cpp  Point.hpp  Point2D.cpp  Point2D.hpp  Radiance.cpp  Radiance.hpp  Ray.cpp  Ray.hpp  Sampler.hpp  Transformation.cpp  Transformation.hpp  Vector.cpp  Vector.hpp  Vector2D.cpp  Vector2D.hpp
Math/Sampler/: Base.hpp  CLKernels.cl  CLProxies.hpp  Halton.cpp  Halton.hpp  Random.cpp  Random.hpp
Object/: Albedo.hpp  BoundingVolume.cpp  BoundingVolume.hpp  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.hpp  Brdf.cpp  Brdf.hpp  CLKernels.cl  CLProxies.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Intersection.cpp  Intersection.hpp  Kernels.cl  Light.hpp  NormalMap.cpp  NormalMap.hpp  PointLight.cpp  PointLight.hpp  Primitive.cpp  Primitive.hpp  Radiance.cpp  Radiance.hpp  Scene.cpp  Scene.hpp  Shape.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp
Object/Albedo/: Base.hpp  CLKernels.cl  CLProxies.hpp  Kernels.cl  Solid.cpp  Solid.hpp  Texture.cpp  Texture.hpp
Object/Brdf/: Base.cpp  Base.hpp  CLKernels.cl  CLProxies.hpp  Composite.cpp  Composite.hpp  Lambert.cpp  Lambert.hpp  OrenNayar.cpp  OrenNayar.hpp  Phong.cpp  Phong.hpp  TorranceSparrow.cpp  TorranceSparrow.hpp
Object/Light/: Base.hpp  Point.cpp  Point.hpp  Shape.cpp  Shape.hpp
Object/Shape/: Base.hpp  BezierPatch.cpp  BezierPatch.hpp  BezierPatches.cpp  BezierPatches.hpp  CLKernels.cl  CLProxies.hpp  Grid.cpp  Grid.hpp  Group.cpp  Group.hpp  Kernels.cl  Quad.cpp  Quad.hpp  Sphere.cpp  Sphere.hpp  Transformed.cpp  Transformed.hpp  Triangle.cpp  Triangle.hpp  TriangleMesh.cpp  TriangleMesh.hpp
Parse/: AST.h  BmpLoader.cpp  BmpLoader.hpp  BptLoader.cpp  BptLoader.hpp  BvhFile.cpp  BvhFile.hpp  Parser.cpp  Parser.hpp  PlyLoader.cpp  PlyLoader.hpp  Scene.l  Scene.y  SceneParser.cpp  SceneParser.hpp
Render/: Engine.cpp  Engine.hpp  Executor.cpp  Executor.hpp  Framebuffer.cpp  Framebuffer.hpp  Job.hpp  LightProbe.cpp  LightProbe.hpp  Raster.hpp  RasterJob.cpp  RasterJob.hpp  RenderJob.cpp  RenderJob.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Settings.hpp  TileJob.cpp  TileJob.hpp  TileJobSimple.cpp  TileJobSimple.hpp  UniPathRenderer.cpp  UniPathRenderer.hpp  WorkQueue.cpp  WorkQueue.hpp  WorkQueueJob.cpp  WorkQueueJob.hpp
Render/Cpu/: Executor.cpp  Executor.hpp  Lighter.cpp  Lighter.hpp  RasterJob.cpp  RasterJob.hpp  Renderer.cpp  Renderer.hpp  RendererLighter.cpp  RendererLighter.hpp  RendererReSTIR.cpp  RendererReSTIR.hpp
Render/Gpu/: CLKernels.cl  CLProxies.hpp  Kernels.cl  Renderer.cpp  Renderer.hpp  WorkQueue.cpp  WorkQueue.hpp
Render/Lighter/: Base.cpp  Base.hpp  Direct.hpp  IrradianceCached.cpp  IrradianceCached.hpp  UniPath.cpp
Render/Queued/: Renderer.cpp  Renderer.hpp  WorkQueue.cpp  WorkQueue.hpp  WorkQueueJob.cpp  WorkQueueJob.hpp
RenderOld/: Framebuffer.hpp  Job.cpp  Job.hpp  Settings.hpp  TileJob.cpp  TileJobSimple.hpp
RenderOld/Lighter/: Base.cpp  Base.hpp  Direct.cpp  UniPath.hpp
raytrace/: App.cpp  App.hpp  LightProbeDlg.cpp  LightProbeDlg.hpp  Main.cpp  RenderControlDlg.cpp  RenderControlDlg.hpp  RenderEngine.cpp  RenderEngine.hpp  Resource.h  ast.h  box.cpp  box.h  buildscene.cpp  buildscene.h  camera.cpp  camera.h  color.cpp  color.h  cone.cpp  cone.h  csg.cpp  csg.h  cylinder.cpp  cylinder.h  disk.cpp  disk.h  finish.cpp  finish.h  intersection.cpp  intersection.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  object.cpp  object.h  pigment.cpp  pigment.h  (+30 more)
raytrace/Lighter/: Base.cpp  Base.hpp  DiffuseDirect.cpp  DiffuseDirect.hpp  DiffuseIndirect.cpp  DiffuseIndirect.hpp  Direct.cpp  Direct.hpp  Forwards.hpp  Indirect.cpp  Indirect.hpp  IrradianceCache.cpp  IrradianceCache.hpp  Master.cpp  Master.hpp  RadianceGradient.cpp  RadianceGradient.hpp  Radiant.cpp  Radiant.hpp  Sampler.cpp  Sampler.hpp  Specular.cpp  Specular.hpp  Transmit.cpp  Transmit.hpp  Utils.cpp  Utils.hpp
raytrace/Math/: Beam.hpp  Bivector.cpp  Bivector.hpp  Bivector2D.cpp  Coordinate.cpp  Coordinate.hpp  Forwards.hpp  Matrix.cpp  Matrix.hpp  Normal.cpp  Normal.hpp  OrthonormalBasis.cpp  Point.cpp  Point.hpp  Point2D.cpp  Point2D.hpp  PolySolve.cpp  PolySolve.hpp  Ray.cpp  Ray.hpp  Transformation.cpp  Transformation.hpp  Vector.cpp  Vector.hpp  Vector2D.cpp  Vector2D.hpp
raytrace/Object/: Base.cpp  Base.hpp  BoundingVolume.cpp  BoundingVolume.hpp  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.hpp  Box.cpp  Box.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Cone.cpp  Cone.hpp  Csg.cpp  Csg.hpp  Cylinder.cpp  Cylinder.hpp  Disk.cpp  Disk.hpp  Finish.cpp  Finish.hpp  Forwards.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  NormalMap.cpp  NormalMap.hpp  Object.cpp  Object.hpp  Pigment.cpp  Pigment.hpp  Plane.cpp  Plane.hpp  PointLight.cpp  PointLight.hpp  Primitive.cpp  Primitive.hpp  Radiance.cpp  (+11 more)
raytrace/Parse/: AST.h  BmpLoader.cpp  BmpLoader.hpp  BptLoader.cpp  BvhFile.cpp  Scene.l  (+6 more)
scenes/: scene_dragon_sky.txt  scene_sphere_transparent.txt  scene_teapot.txt
src/: main.rs
(+304 files in other folders)
