project('raytrace', 'c', 'cpp', default_options: ['buildtype=debugoptimized'])

python = dependency('python3')
opencl = dependency('OpenCL')

executable('raytrace',
    'App/Main.cpp',
    'App/PythonInterface.cpp',
    'Math/Beam.cpp',
    'Math/Bivector.cpp',
    'Math/Bivector2D.cpp',
    'Math/Color.cpp',
    'Math/Matrix.cpp',
    'Math/Normal.cpp',
    'Math/OrthonormalBasis.cpp',
    'Math/Pdf.cpp',
    'Math/Point.cpp',
    'Math/Point2D.cpp',
    'Math/Radiance.cpp',
    'Math/Ray.cpp',
    'Math/Transformation.cpp',
    'Math/Vector.cpp',
    'Math/Vector2D.cpp',
    'Math/Impl/Sampler/Halton.cpp',
    'Math/Impl/Sampler/Random.cpp',
    'Object/Impl/Albedo/Solid.cpp',
    'Object/Impl/Albedo/Texture.cpp',
    'Object/Impl/Brdf/Lambert.cpp',
    'Object/Impl/Brdf/OrenNayar.cpp',
    'Object/Impl/Brdf/Phong.cpp',
    'Object/Impl/Brdf/TorranceSparrow.cpp',
    'Object/Impl/Light/Point.cpp',
    'Object/Impl/Light/Shape.cpp',
    'Object/Impl/Light/Sky.cpp',
    'Object/Impl/Shape/BezierPatch.cpp',
    'Object/Impl/Shape/Grid.cpp',
    'Object/Impl/Shape/Group.cpp',
    'Object/Impl/Shape/Quad.cpp',
    'Object/Impl/Shape/Sphere.cpp',
    'Object/Impl/Shape/Transformed.cpp',
    'Object/Impl/Shape/Triangle.cpp',
    'Object/Impl/Shape/TriangleMesh.cpp',
    'Object/Brdf.cpp',
    'Object/BoundingVolume.cpp',
    'Object/BoundingVolumeHierarchy.cpp',
    'Object/Camera.cpp',
    'Object/Intersection.cpp',
    'Object/NormalMap.cpp',
    'Object/Primitive.cpp',
    'Object/Scene.cpp',
    'Object/Surface.cpp',
    'Object/Texture.cpp',
    'Parse/BmpLoader.cpp',
    'Parse/BptLoader.cpp',
    'Parse/BvhFile.cpp',
    'Parse/PlyLoader.cpp',
    'Parse/SceneParser.cpp',
    'Render/Framebuffer.cpp',
    'Render/LightProbe.cpp',
    'Render/Cpu/Executor.cpp',
    'Render/Cpu/RendererLighter.cpp',
    'Render/Cpu/RendererReSTIR.cpp',
    'Render/Cpu/RasterJob.cpp',
    'Render/Cpu/Lighter.cpp',
    'Render/Cpu/Impl/Lighter/Direct.cpp',
    'Render/Cpu/Impl/Lighter/IrradianceCached.cpp',
    'Render/Cpu/Impl/Lighter/UniPath.cpp',
    'Render/Gpu/Renderer.cpp',
    'Render/Gpu/WorkQueue.cpp',
    'OpenCL.cpp',
    cpp_args: ['/std:c++17'],
    dependencies: [python, opencl]
)
